[gd_scene load_steps=7 format=3 uid="uid://6k3mqkpx0jdm"]

[ext_resource type="Script" path="res://scripts/StartScene.gd" id="1_fic6o"]
[ext_resource type="FontFile" uid="uid://dmhfu66md6tvm" path="res://assets/fonts/antiquity-print.ttf" id="2_m3oo6"]
[ext_resource type="Texture2D" uid="uid://bowal6nplueto" path="res://assets/long_name.png" id="3_lh8jo"]

[sub_resource type="Theme" id="Theme_k6rhi"]
default_font = ExtResource("2_m3oo6")

[sub_resource type="Theme" id="Theme_u6qi0"]
default_font = ExtResource("2_m3oo6")

[sub_resource type="Theme" id="Theme_lsciq"]
default_font = ExtResource("2_m3oo6")

[node name="StartScene" type="Node2D"]
script = ExtResource("1_fic6o")

[node name="Button" type="Button" parent="."]
texture_filter = 1
offset_left = 21.0
offset_top = 354.0
offset_right = 114.0
offset_bottom = 385.0
theme = SubResource("Theme_k6rhi")
text = "Polygon"
flat = true

[node name="Button2" type="Button" parent="."]
texture_filter = 1
offset_left = 3.0
offset_top = 459.0
offset_right = 105.0
offset_bottom = 491.0
theme = SubResource("Theme_u6qi0")
text = "Exit"
flat = true

[node name="LongName" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(532, 194)
scale = Vector2(1.54225, 1.33158)
texture = ExtResource("3_lh8jo")

[node name="Button3" type="Button" parent="."]
offset_left = 23.0
offset_top = 398.0
offset_right = 149.0
offset_bottom = 445.0
theme = SubResource("Theme_lsciq")
text = "Simple Polygon"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
